--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_AUTORCC ON)
 set(project_ui src/mainwindow.ui)
 set(project_headers include/mainwindow.h)
 set(project_sources src/main.cpp src/mainwindow.cpp)
-set(project_resources resources/logg.qrc resources/geditor.rc resources/ProximaNova.ttf)
+set(project_resources resources/logg.qrc resources/geditor.rc resources/ProximaNova_rg.ttf)
 
 add_executable(${PROJECT_NAME} ${project_sources} ${project_headers} ${project_ui} ${project_resources})
 
