added a process handler to read ffmpeg stderr output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,15 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_PREFIX_PATH "C:\\Qt\\5.14.2\\msvc2017_64")
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui)
 
+#set(CMAKE_BUILD_TYPE "Release")
+
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 set(project_ui src/mainwindow.ui)
-set(project_headers include/mainwindow.h)
-set(project_sources src/main.cpp src/mainwindow.cpp)
+set(project_headers include/mainwindow.h include/ProcessHandler.h)
+set(project_sources src/main.cpp src/mainwindow.cpp src/ProcessHandler.cpp)
 set(project_resources resources/logg.qrc resources/geditor.rc resources/ProximaNova_rg.ttf)
 
 add_executable(${PROJECT_NAME} ${project_sources} ${project_headers} ${project_ui} ${project_resources})
